tests/errors/require_tuple_int_and_int_give_int_and_string.duck
fn main() {
    let x: (Int, Int) = (5, "");
}
